@@ -8,6 +8,7 @@ __________________________________________
 	* IMPORTANT: Changed media license for community contributions to "Creative Commons Attribution-ShareAlike 3.0 Unported"
 	* Improved r_softShadows quality and speed with irregular shadowmap sampling like in Crysis
 	* Implemented Exponential Variance Shadow Mapping to fight the VSM light bleeding problems
+	* Optimized tangent space calculations for ET skeletal models (big speed improvement if r_vboVertexSkinning 0)
 	* Fixed bugs concerning r_vboDeformVertexes
 	* Added more ET specific keywords to the .shader parser
 	* Added top-down view for r_showBspNodes
@@ -18,8 +19,9 @@ ___________________________________________________
 ET-XreaL_snapshot_20110505.7z
 __________________________________________
 
+	* Optimized all OpenGL shaders by using compile macro combinations
 	* Optimized ET skeletal animation with LOD meshes
-	* Fixed shader problems with open source Intel driver
+	* Fixed shader problems with the open source Intel driver
 	* Renamed r_noDynamicLighting to r_dynamicLight for better compatibility with ET mods
 	* Fixed sky vs. global fog rendering issues
 	* Enabled SSE math code
